--- a/src/layout/components/Navbart/index.less
+++ b/src/layout/components/Navbart/index.less
@@ -2,12 +2,21 @@
   height: 50px;
   background-color: #fff;
   border-bottom: 1px solid #e4e7ed;
+  font-size: 20px;
 
-  .layout-header-content {
+  .layout-header {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0 10px;
+    box-sizing: border-box;
+
+    .layout-header-left {
+    }
+
+    .layout-header-right {
+    }
   }
 }
