--- a/src/layout/components/Navbart/index.less
+++ b/src/layout/components/Navbart/index.less
@@ -1,8 +1,9 @@
 .layout .site-layout-sub-header {
   height: 50px;
+  line-height: 50px;
   // background-color: #fff;
   // border-bottom: 1px solid #e4e7ed;
-  font-size: 20px;
+  font-size: 16px;
 
   .layout-header {
     width: 100%;
@@ -10,10 +11,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 10px;
     box-sizing: border-box;
 
     .layout-header-left {
+      .layout-header-collapsed {
+        margin: 10px;
+      }
+    }
+
+    .layout-header-conter {
+      flex: auto;
+      min-width: 0;
     }
 
     .layout-header-right {
