--- a/src/layout/components/Setting/index.less
+++ b/src/layout/components/Setting/index.less
@@ -1,61 +1,65 @@
-.sidebar_seting {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+.setting {
+  padding: 0 16px;
 
-  .sidebar_mode {
-    position: relative;
-    width: 80px;
-    height: 60px;
-    background: #f0f2f5;
-    border-radius: 5px;
-    box-shadow: 0 1px 2.5px 0 rgb(0 0 0 / 18%);
-    overflow: hidden;
+  .sidebar_seting {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-    &:nth-child(1) {
-      div {
-        &:nth-child(1) {
-          width: 30%;
-          height: 100%;
-        }
+    .sidebar_mode {
+      position: relative;
+      width: 80px;
+      height: 60px;
+      background: #f0f2f5;
+      border-radius: 5px;
+      box-shadow: 0 1px 2.5px 0 rgb(0 0 0 / 18%);
+      overflow: hidden;
 
-        &:nth-child(2) {
-          position: absolute;
-          top: 0;
-          right: 0;
-          width: 70%;
-          height: 30%;
-          background: #fff;
-          box-shadow: 0 0 1px #888;
-        }
-      }
-    }
+      &:nth-child(1) {
+        div {
+          &:nth-child(1) {
+            width: 30%;
+            height: 100%;
+          }
 
-    &:nth-child(2) {
-      div {
-        &:nth-child(1) {
-          width: 100%;
-          height: 30%;
-          box-shadow: 0 0 1px #888;
+          &:nth-child(2) {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 70%;
+            height: 30%;
+            background: #fff;
+            box-shadow: 0 0 1px #888;
+          }
         }
       }
-    }
 
-    &:nth-child(3) {
-      div {
-        &:nth-child(1) {
-          width: 30%;
-          height: 100%;
-          background: #fff;
+      &:nth-child(2) {
+        div {
+          &:nth-child(1) {
+            width: 100%;
+            height: 30%;
+            box-shadow: 0 0 1px #888;
+          }
         }
+      }
 
-        &:nth-child(2) {
-          position: absolute;
-          top: 0;
-          right: 0;
-          width: 100%;
-          height: 30%;
-          box-shadow: 0 0 1px #888;
+      &:nth-child(3) {
+        div {
+          &:nth-child(1) {
+            width: 30%;
+            height: 100%;
+            background: #fff;
+          }
+
+          &:nth-child(2) {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 100%;
+            height: 30%;
+            box-shadow: 0 0 1px #888;
+          }
         }
       }
     }
