--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
   padding: 0;
 }
 
-:root {
+#root {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   transition: background 0.3s, width 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
 }
 
@@ -16,6 +16,14 @@ ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
+}
+
+.supense-loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cursor {
