--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,7 @@ body {
   padding: 0;
 }
 
-#root {
-  width: 100%;
-  height: 100vh;
-  transition: background 0.3s, width 0.3s cubic-bezier(0.2, 0, 0, 1) 0s;
-}
+/* #root {} */
 
 ul {
   list-style-type: none;
@@ -28,4 +24,13 @@ ul {
 
 .cursor {
   cursor: pointer;
+}
+
+/* 灰色 */
+.html-grey {
+  filter: grayscale(100%);
+}
+/* 色弱 */
+.html-weakness {
+  filter: invert(80%);
 }
