feat(layout): ✨ sidebar
- sidebar 文字溢出显示 tooltip

--- a/src/layout/components/Navbart/index.less
+++ b/src/layout/components/Navbart/index.less
@@ -22,6 +22,9 @@
     .layout-header-conter {
       flex: auto;
       min-width: 0;
+      .ant-typography {
+        line-height: inherit;
+      }
     }
 
     .layout-header-right {
