--- a/docs/static/index-m-VRg7nE.css
+++ b/docs/static/index-m-VRg7nE.css
@@ -1,38 +1,1 @@
-.home {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-}
-.home .content .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.home .content .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.home .content .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-@keyframes logo-spin {
-  0% {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-@media (prefers-reduced-motion: no-preference) {
-  .home .content a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-.home .content .card {
-  padding: 2em;
-}
-.home .content .read-the-docs {
-  color: #888;
-}
+.home{display:flex;align-items:center;justify-content:center;text-align:center;width:100%;height:100%}.home .content .logo{height:6em;padding:1.5em;will-change:filter}.home .content .logo:hover{filter:drop-shadow(0 0 2em #646cffaa)}.home .content .logo.react:hover{filter:drop-shadow(0 0 2em #61dafbaa)}@keyframes logo-spin{0%{transform:rotate(0)}to{transform:rotate(360deg)}}@media (prefers-reduced-motion: no-preference){.home .content a:nth-of-type(2) .logo{animation:logo-spin infinite 20s linear}}.home .content .card{padding:2em}.home .content .read-the-docs{color:#888}
