--- a/src/components/AppTheme/index.less
+++ b/src/components/AppTheme/index.less
@@ -15,7 +15,9 @@
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    transition: transform 0.5s, background-color 0.5s;
+    transition:
+      transform 0.5s,
+      background-color 0.5s;
     will-change: transform;
   }
 }
